<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:layout_margin="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/household_profile_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/primary_text"
                        style="@style/CustomFontTextViewStyle.ClientList.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:password="false"
                        android:layout_gravity="center_horizontal" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:orientation="vertical">

                        <org.smartregister.view.customcontrols.CustomFontTextView
                            android:id="@+id/secondary_text"
                            style="@style/CustomFontTextViewStyle.ClientList.Light"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/client_list_grey"
                            android:textSize="22sp"
                            android:layout_gravity="center_horizontal" />
                    </LinearLayout>

                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/tertiary_text"
                        style="@style/CustomFontTextViewStyle.ClientList.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/client_list_grey"
                        android:textSize="22sp"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/client_list_header_dark_grey" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/add_member_label"
                style="@style/CustomFontTextViewStyle.ClientList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="23dp"
                android:text="@string/add_hh_membr"
                android:textColor="@color/text_black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

            </LinearLayout>

            <Button
                android:id="@+id/add_woman"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vaccination_earlier_bg"
                android:text="@string/add_wmn_membr"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/client_list_grey"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <Button
                android:id="@+id/add_child"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vaccination_earlier_bg"
                android:text="@string/add_child_membr"
                android:textAllCaps="false"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/client_list_grey"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">


                <Button
                    android:id="@+id/cancel"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_adding_member"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/client_list_grey"
                    android:textSize="22sp" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>