<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_nav_bar_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/actionbar"
    android:focusableInTouchMode="true"
    tools:showIn="@layout/smart_register_nav_bar_customized">

    <RelativeLayout
        android:id="@+id/back_btn_layout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/btn_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/name_inits"
...
