<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="#494949"
    android:theme="@style/AppThemeNoTitle.AppBarOverlay">

    <org.smartregister.growplus.toolbar.LocationSwitcherToolbar
        android:id="@+id/location_switching_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#494949"
        >
        <RelativeLayout
            android:id="@+id/back_btn_layout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true">
        <LinearLayout
            android:id="@+id/btn_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/name_inits"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_margin="1dp"
                android:background="@drawable/name_inits_bg"
                android:gravity="center"
                android:text="RW"
                android:textAllCaps="true"
                android:textColor="@color/actionbar"
                android:textSize="25sp"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/abc_ic_ab_back_material"
                android:visibility="gone" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/sync_progress_bar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/title"
                style="@style/CustomFontTextViewStyle.NavBar.Black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/side_nav_hia2"
                />

            <View
                android:id="@+id/separator_v"
                android:layout_width="@dimen/smart_register_nav_bar_separator"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:background="@drawable/vertical_separator_male"
                android:visibility="invisible"
                android:scaleType="fitXY" />
        </FrameLayout>
    </org.smartregister.growplus.toolbar.LocationSwitcherToolbar>

</android.support.design.widget.AppBarLayout>