...
		android:layout_marginRight="@dimen/register_search_bar_min_margin"
		android:layout_weight="1.7"
		android:focusable="true"
		android:focusableInTouchMode="true">

		<EditText
			android:id="@+id/edt_search"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentLeft="true"
			android:layout_marginRight="0dp"
			android:background="@drawable/white_edit_text_shape"
			android:ellipsize="end"
...
			android:padding="@dimen/register_search_bar_padding"
			android:textColor="@color/search_textfield_text_color"
			android:textColorHint="@color/search_hint_white"
			android:textSize="@dimen/default_font_size_search_bar" />

		<ImageButton
			android:id="@+id/btn_search_cancel"
			android:layout_width="@dimen/ec_main_header_search_cancel_button_width"
			android:layout_height="match_parent"
			android:layout_alignParentRight="true"
			android:layout_marginRight="@dimen/search_view_cancel_image_margin_right"
			android:background="@android:color/transparent"
			android:src="@drawable/ic_cross"
...
