<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_nav_bar_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_blue"
    android:focusableInTouchMode="true">


    <android.support.design.org.smartregister.cbhc.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.org.smartregister.cbhc.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="-10dp"
            android:background="@color/actionbar">

            <include layout="@layout/tool_bar" />

        </android.support.v7.org.smartregister.cbhc.widget.Toolbar>

    </android.support.design.org.smartregister.cbhc.widget.AppBarLayout>
</RelativeLayout>